# universal-doc-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python.yml  worker.yml
docs/: RELEASE.md
src/scoutdocs_mcp/: __init__.py  cache.py  docs_fetcher.py  manifests.py  registries.py  search.py  server.py
tests/: conftest.py  test_cache.py  test_docs_fetcher.py  test_manifests.py  test_registries.py  test_search.py  test_smoke_live.py
tests/fixtures/: crates_serde.json  npm_express.json  pypi_requests.json  pypi_with_prereleases.json
worker/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
worker/src/: cache.ts  docs.ts  index.ts  mcp.ts  registries.ts  search.ts  types.ts
worker/test/: env.d.ts  mcp.test.ts  search.test.ts
