[project]
name = "scoutdocs-mcp"
version = "0.2.0b1"
description = "MCP server that fetches and searches latest stable documentation for packages on PyPI, npm, and crates.io."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Eshaan Mathakari", email = "eshaan.mathakari@gmail.com"},
]
keywords = ["mcp", "documentation", "ai", "agent", "coding", "pypi", "npm", "crates", "registry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "packaging>=23.0",
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[project.urls]
Homepage = "https://github.com/eshaanmathakari/scoutdocs-mcp"
Repository = "https://github.com/eshaanmathakari/scoutdocs-mcp"
Issues = "https://github.com/eshaanmathakari/scoutdocs-mcp/issues"
Documentation = "https://github.com/eshaanmathakari/scoutdocs-mcp#readme"
Changelog = "https://github.com/eshaanmathakari/scoutdocs-mcp/releases"

[project.scripts]
scoutdocs-mcp = "scoutdocs_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
